--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
     "name": "monitor-file",
     "displayName": "Monitor File",
     "description": "An extension that forecefully reloads file.",
-    "version": "0.0.0",
-    "publisher": "rkostrzewski",
+    "version": "0.4.0",
+    "publisher": "rkostrzewski (http://github.com/rkostrzewski)",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/rkostrzewski/vscode-monitor-file.git"
+    },
+    "bugs": "https://github.com/rkostrzewski/vscode-monitor-files/issues",
     "engines": {
         "vscode": "^1.5.0"
     },
@@ -25,15 +31,18 @@
         }]
     },
     "scripts": {
-        "vscode:prepublish": "tsc -p ./",
-        "compile": "tsc -watch -p ./",
+        "vscode:prepublish": "./node_modules/.bin/tsc -p ./",
+        "compile": "./node_modules/.bin/tsc -watch -p ./",
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "devDependencies": {
         "typescript": "^2.0.3",
-        "vscode": "^1.0.0",
         "mocha": "^2.3.3",
         "@types/node": "^6.0.40",
         "@types/mocha": "^2.2.32"
+    },
+    "dependencies": {
+        "rxjs": "^5.0.0-beta.12",
+        "vscode": "^1.0.0"
     }
 }
