--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,3 +1,8 @@
+language: node_js
+
+node_js:
+  - "node"
+
 sudo: false
 
 os:
@@ -13,4 +18,10 @@ before_install:
 
 install:
   - npm install
+
+script:  
   - npm run vscode:prepublish
+
+cache:
+  directories:
+    - node_modules
