--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "monitor-file",
     "displayName": "Monitor File",
-    "description": "An extension that forecefully reloads file.",
+    "description": "An extension that forcefully reloads file.",
     "version": "1.0.1",
     "publisher": "rkostrzewski",
     "author": "rkostrzewski (http://github.com/rkostrzewski)",
